[TS-3184]: spdy window_update not triggered correctly